tests/invalid/Template_Invalid_8.whiley
function f<T>(T x) -> (T y):
    return x

method main():
    int x = f(true)